Compilation/test/error/test5_error.tpc
int a;
int azer(void){
	a = 3;
	b = c';
	print (1); 
	zeekf(aaa aa);
	zeekf(a;
	return 
	// Ceci est un autre test
	
	/*Ceci/Ceci est un commen/*t*a*ire est un commentaire*/
	
}
